# aura

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  homebrew.yml  release.yml
crates/ai/: Cargo.toml
crates/ai/src/: claude_code.rs  client.rs  context.rs  lib.rs  ollama_client.rs  openai_client.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: main.rs
crates/core/: Cargo.toml
crates/core/benches/: crdt_bench.rs  large_file_bench.rs
crates/core/src/: author.rs  buffer.rs  conversation.rs  crdt.rs  cursor.rs  lib.rs  semantic.rs  sync.rs
crates/editor/: Cargo.toml
crates/editor/src/: main.rs
crates/tui/: Cargo.toml
crates/tui/benches/: render_bench.rs
crates/tui/src/: acp_server.rs  agent_plan.rs  agent_timeline.rs  ai_visor.rs  app.rs  apply_model.rs  bookmarks.rs  branch_picker.rs  chat_panel.rs  chat_tools.rs  checkpoints.rs  claude_watcher.rs  collab.rs  command_palette.rs  config.rs  context_menu.rs  context_pin.rs  conversation_history.rs  dap.rs  debug_panel.rs  diff_view.rs  embedded_terminal.rs  file_picker.rs  file_tree.rs  file_watcher.rs  git.rs  git_graph.rs  git_worker.rs  help.rs  highlight.rs  http_client.rs  image_preview.rs  input.rs  lib.rs  local_history.rs  lsp.rs  markdown_preview.rs  marketplace.rs  mcp_client.rs  mcp_server.rs  (+20 more)
crates/tui/src/app/: lifecycle.rs  mod.rs  updates.rs
crates/tui/tests/: integration.rs
docs/: book.toml
docs/src/: SUMMARY.md  api-reference.md
docs/src/architecture/: ai.md  core.md  mcp.md  overview.md  tui.md
docs/src/contributing/: development.md  roadmap.md  testing.md
docs/src/getting-started/: configuration.md  first-run.md  installation.md
docs/src/user-guide/: ai-features.md  ai-visor.md  chat-panel.md  claude-code.md  collaborative-editing.md  debugger.md  file-navigation.md  git.md  http-client.md  keybindings.md  lsp.md  markdown-preview.md  modes.md  notebook.md  plugins.md  session.md  split-panes.md  ssh-remote.md  terminal.md  zen-mode.md
scripts/: aura-mcp-bridge.py
