[workspace]
members = ["crates/core", "crates/tui", "crates/ai", "crates/editor"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"
documentation = "https://odtorres.github.io/aura/"
repository = "https://github.com/odtorres/aura"

[workspace.dependencies]
# Text buffer
ropey = "1.6"
automerge = "0.7"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Syntax
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

# Git
gix = { version = "0.70", default-features = false, features = ["basic", "index"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

# Terminal emulation
portable-pty = "0.8"
vte = "0.13"

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# CI backends to generate
ci = "github"
# Targets to build for
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Generate shell installer scripts
installers = ["shell", "homebrew"]
# Enable GitHub releases
publish-jobs = ["homebrew"]
# Homebrew tap repository
tap = "aura-editor/homebrew-tap"
# Formula name
formula = "aura"
