[workspace]
members = ["crates/core", "crates/tui", "crates/ai", "crates/editor", "crates/bridge"]
resolver = "2"

[workspace.package]
version = "0.4.24"
edition = "2021"
license = "MIT"
rust-version = "1.75"
documentation = "https://odtorres.github.io/aura/"
repository = "https://github.com/odtorres/aura"

[workspace.dependencies]
# Text buffer
ropey = "1.6"
automerge = "0.7"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Syntax
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.23"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-md = "0.5"
tree-sitter-elixir = "0.3"
tree-sitter-heex = "0.8"
tree-sitter-php = "0.24"
tree-sitter-sql = "0.0.2"
tree-sitter-dockerfile = "0.2"
tree-sitter-nginx = "1.0"
tree-sitter-lua = "0.5"
tree-sitter-dart = "0.1"
tree-sitter-swift = "0.7"
tree-sitter-kotlin = "0.3"
tree-sitter-zig = "1.1"
tree-sitter-scala = "0.25"
tree-sitter-haskell = "0.23"

# Plugin runtime
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }

# TLS for remote collaboration
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
webpki-roots = "0.26"

# Git
gix = { version = "0.70", default-features = false, features = ["basic", "index"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

# Clipboard
arboard = "3"

# Update checking
ureq = { version = "3", features = ["json"] }
semver = "1"

# Terminal emulation
portable-pty = "0.8"
vte = "0.13"
unicode-width = "0.2"

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Config for 'dist'
[workspace.metadata.dist]
# CI backends to support
ci = "github"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# The installers to generate for each app
installers = ["shell"]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
