[package]
name = "aura-mcp-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stdio-to-TCP bridge for connecting Claude Code to AURA's MCP server"

[[bin]]
name = "aura-mcp-bridge"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
