[package]
name = "aura-core"
version.workspace = true
edition.workspace = true

[dependencies]
ropey.workspace = true
automerge.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rusqlite.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "crdt_bench"
harness = false

[[bench]]
name = "large_file_bench"
harness = false
