[package]
name = "aura"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "AI-native terminal text editor for human + AI co-authoring"
repository.workspace = true
homepage = "https://odtorres.github.io/aura/"
keywords = ["editor", "terminal", "ai", "tui", "vim"]
categories = ["command-line-utilities", "text-editors"]

[[bin]]
name = "aura"
path = "src/main.rs"

[dependencies]
aura-core = { path = "../core" }
aura-tui = { path = "../tui" }
aura-ai = { path = "../ai" }
crossterm.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
