[package]
name = "aura-tui"
version.workspace = true
edition.workspace = true

[dependencies]
aura-core = { path = "../core" }
aura-ai = { path = "../ai" }
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
toml.workspace = true
gix.workspace = true
portable-pty.workspace = true
vte.workspace = true
arboard.workspace = true
ureq.workspace = true
semver.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "render_bench"
harness = false
