[package]
name = "aura-tui"
version.workspace = true
edition.workspace = true

[dependencies]
aura-core = { path = "../core" }
aura-ai = { path = "../ai" }
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-html.workspace = true
tree-sitter-css.workspace = true
tree-sitter-json.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-yaml.workspace = true
tree-sitter-md.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-heex.workspace = true
toml.workspace = true
gix.workspace = true
portable-pty.workspace = true
vte.workspace = true
arboard.workspace = true
ureq.workspace = true
semver.workspace = true
mlua.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rcgen.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "render_bench"
harness = false
