[package]
name = "aura-editor-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI rendering, input handling, and editor features for the AURA editor"

[lib]
name = "aura_tui"

[dependencies]
aura-editor-core = { path = "../core", version = "0.2.2" }
aura-editor-ai = { path = "../ai", version = "0.2.2" }
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-html.workspace = true
tree-sitter-css.workspace = true
tree-sitter-json.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-yaml.workspace = true
tree-sitter-md.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-heex.workspace = true
tree-sitter-php.workspace = true
tree-sitter-sql.workspace = true
tree-sitter-dockerfile.workspace = true
tree-sitter-nginx.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-dart.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-kotlin.workspace = true
tree-sitter-zig.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-haskell.workspace = true
toml.workspace = true
gix.workspace = true
portable-pty.workspace = true
vte.workspace = true
arboard.workspace = true
ureq.workspace = true
semver.workspace = true
mlua.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rcgen.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "render_bench"
harness = false
